--- a/AportePEPE.cbp
+++ b/AportePEPE.cbp
@@ -34,6 +34,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="Arbol.cpp" />
+		<Unit filename="Arbol.h" />
 		<Unit filename="Empleado.cpp" />
 		<Unit filename="Empleado.h" />
 		<Unit filename="Gerente.cpp" />
